--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,8 @@ html, body {
 			color: #fff;
 			font-size: 20px;
 		}
+
+		margin-bottom: 20px;
 	}
 
 	.content {
@@ -29,7 +31,55 @@ html, body {
 	}
 
 	.post {
-		width: 500px;
-		margin: 0 auto;
+		width: 700px;
+		margin: 0 auto 30px auto;
+		padding: 30px;
+		border: 1px solid #CCC;
+		background: #fff;
+
+		header {
+			overflow: hidden;
+			padding-bottom: 10px;
+			margin-bottom: 15px;
+			.avatar {
+				float: left;
+				margin-right: 10px;
+
+				.thumb {
+					width: 60px;
+					height: 60px;
+					border-radius: 100%;
+					background-position: center;
+					background-size: cover;
+				}
+			}
+
+			.author {
+				font-size: 20px;
+				color: #666;
+				margin-bottom: 5px;
+			}
+
+			.helper {
+				font-size: 14px;
+				color: #999;
+			}
+
+			border-bottom: 1px solid #EEE;
+		}
+
+
+		.content {
+			text-align: left;
+			p {
+				line-height: 20px;
+				margin-bottom: 10px;
+				font-size: 16px;
+				color: #333;
+			}
+		}
+
+
 	}
+
 }
